# test-protobuf

./: Cargo.toml  README.md  build.rs
proto/: helloworld.proto
proto-bin/: helloworld.rs
runtime/src/: lib.rs
src/: main.rs
src/derive/: Cargo.toml
src/derive/src/: lib.rs
