[package]
name = "test-protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
# Only necessary if using Protobuf well-known types:
prost-types = "0.10"
runtime = {path = "runtime"}
test-protobuf-derive = {path = "src/derive"}



[build-dependencies]
tonic-build = { version = "0.7", features = ["prost"] }
